--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/index_style.css}">
     <title>Recipe</title>
 </head>
 <body>
-    <h1>Recipes!</h1>
+    <h1>Recipe page</h1>
     
 </body>
 </html>
