--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,10 @@
 </head>
 <body>
     <h1>Recipe page</h1>
-    
 
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Recipe</th>
-        </tr>
-        <tr th:each="recipe:${recipes}">
-            <td th:text="${recipe.id}">ID</td>
-            <td th:text="${recipe.description}">ad</td>
-        </tr>
-    </table>
+    <p>List of recipes:</p>
+    <ul>
+        <li th:each="recipe:${recipes}" th:text="${recipe.description}">Blabla</li>
+    </ul>
 </body>
 </html>
