--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,17 +6,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" th:href="@{/css/index_style.css}">
+    
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" 
+        integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"
+        th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}"> -->
+
+    <!-- Optional theme -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous"> -->
+
+    <!-- Latest compiled and minified JavaScript -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" 
+        integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"
+        th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.min.js}"></script>
+     -->
+
+    <link th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}" rel="stylesheet">
+    <script th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.min.js}"></script>
+
+    <script th:src="@{/webjars/jquery/3.6.4/jquery.js}"></script>
     <title>Recipe</title>
 </head>
 <body>
-    <h1>Recipe page</h1>
 
-    <div>
-        <p>List of recipes:</p>
-        <ul>
-            <li th:each="recipe:${recipes}" th:text="${recipe.description}">Blabla</li>
-        </ul>
+    <div class="container-fluid"   style="margin-top: 5vh">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-primary">
+
+                    <div class="panel-heading">
+                        <h1 class="panel-title">
+                            Recipe page
+                        </h1>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="table-responsive">
+
+                            <table class="table table-hover">
+                                <thead class="thead-inverse">
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Description</th>
+                                    </tr>
+                                </thead>
+                                
+                                <tr th:each="recipe : ${recipes}">
+                                    <td th:text="${recipe.id}">123</td>
+                                    
+                                    <td th:text="${recipe.description}"></td>
+                                </tr>
+                            </table>
+                        
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </div>
+
 </body>
 </html>
