--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
                                     <td th:text="${recipe.description}"></td>
 
                                     <td>
-                                        <a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">Show</a>
+                                        <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">Show</a>
                                     </td>
                                 </tr>
                             </table>
