--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,9 @@
                                     <tr>
                                         <th>ID</th>
                                         <th>Description</th>
-                                        <th>More</th>
+                                        <th></th>
+                                        <th></th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 
@@ -44,7 +46,20 @@
                                     <td th:text="${recipe.description}"></td>
 
                                     <td>
-                                        <a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show'}">Show</a>
+                                        <a href="#" 
+                                            th:href="@{'/recipe/' + ${recipe.id} + '/show'}"
+                                            class="btn btn-primary">Show</a>
+                                    </td>
+
+                                    <td>
+                                        <a href="#" 
+                                            th:href="@{'/recipe/' + ${recipe.id} + '/update'}"
+                                            class="btn btn-primary">Update</a>
+                                    </td>
+                                    <td>
+                                        <a href="#" 
+                                            th:href="@{'/recipe/' + ${recipe.id} + '/delete'}"
+                                            class="btn btn-primary">Delete</a>
                                     </td>
                                 </tr>
                             </table>
@@ -52,6 +67,11 @@
                         </div>
                     </div>
 
+                    <div class="panel">
+                        <a href="#" 
+                            th:href="@{/recipe/new}"
+                            class="btn btn-primary">New recipe</a>
+                    </div>
                 </div>
             </div>
         </div>
