--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -181,8 +181,11 @@
 
                     </div>
 
-                    <button type="submit" class="btn btn-primary" style="margin-top: 10px">Submit</button>
-                
+                    <button type="submit" class="btn btn-primary" style="margin: 10px 0px">Submit</button>
+                    <a href="#"
+                        th:href="@{/}"
+                        class="btn btn-primary"
+                        style="margin: 10px 20px">Go back</a>
                 </div>
             </form>
             
