--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -123,6 +123,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel">
+                    <a href="#"
+                        th:href="@{/}"
+                        class="btn btn-primary"
+                        style="margin: 10px 0px">Go back</a>
+                </div>
             </div>
         </div>
     </div>
