--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -82,7 +82,10 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h1 class="panel-title" >Ingredients</h1>
+                        <h1 class="panel-title" style="display: inline;">Ingredients</h1>
+                        <a href="#"
+                            th:href="@{'/recipe/' + ${recipe.id} + '/ingredients'}"
+                            class="btn btn-primary">View</a>
                     </div>
                     <div class="panel-body">
                         <div class="row">
