--- a/src/main/resources/templates/recipe/ingredient/list.html
+++ b/src/main/resources/templates/recipe/ingredient/list.html
@@ -71,7 +71,7 @@
 
                     <div class="panel">
                         <a href="#"
-                            th:href="@{/}"
+                            th:href="@{'/recipe/' + ${recipe.id} + '/show'}"
                             class="btn btn-primary"
                             style="margin: 10px 0px">Go back</a>
                     </div>
