--- a/src/main/resources/templates/recipe/recipeform.html
+++ b/src/main/resources/templates/recipe/recipeform.html
@@ -79,10 +79,12 @@
                                 <div class="col-md-3 form-group">
                                     <label>Difficulty:</label>
 
-                                    <select class="form-control">
-                                        <option>Easy</option>
-                                        <option>Medium</option>
-                                        <option>Hard</option>
+                                    <select class="form-control" th:field="*{difficulty}">
+                                        <option
+                                            th:each="difficultyValue : ${T(com.course.recipe.repipe_project.domain.Difficulty).values()}"
+                                            th:value="${difficultyValue.name()}" 
+                                            th:text="${difficultyValue.name()}">Easy</option>
+                                            <!-- when value is equal to this in db it is marked as selected option -->
                                     </select>
                                 </div>
 
